// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`effectsThemePlugin create theme data with one theme which doesn't exist in figma should create css files with css variables: /export-path/effects/dark-blue/vars.css 1`] = `
"
[data-theme='dark-blue'] {
  --sh-backdrop-blur-100: '';
--sh-backdrop-blur-200: '';
--sh-blur-100: '';
--sh-blur-200: '';
--sh-blur-300: '';
--sh-shadow-100: '';
--sh-shadow-200: '';
--sh-shadow-300: '';
--sh-shadow-400: '';
--sh-shadow-500: '';
--sh-shadow-600: '';
}"
`;

exports[`effectsThemePlugin create theme data with one theme which doesn't exist in figma should create css files with css variables: /export-path/effects/light/vars.css 1`] = `
"
[data-theme='light'] {
  --sh-backdrop-blur-100: 8px;
--sh-backdrop-blur-200: 20px;
--sh-blur-100: 8px;
--sh-blur-200: 20px;
--sh-blur-300: 32px;
--sh-shadow-100: 0px 1px 4px 0px rgba(0, 0, 0, 0.05);
--sh-shadow-200: 0px 1px 4px 0px rgba(0, 0, 0, 0.15);
--sh-shadow-300: 0px 4px 4px -1px rgba(0, 0, 0, 0.15);
--sh-shadow-400: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
--sh-shadow-500: 0px 16px 16px -8px rgba(0, 0, 0, 0.10);
--sh-shadow-600: 0px 40px 104px -8px rgba(0, 0, 0, 0.10);
}"
`;

exports[`effectsThemePlugin create theme data with one theme which doesn't exist in figma should create css files with css variables: /export-path/effects/monochrome/vars.css 1`] = `
"
[data-theme='monochrome'] {
  --sh-backdrop-blur-100: '';
--sh-backdrop-blur-200: '';
--sh-blur-100: '';
--sh-blur-200: '';
--sh-blur-300: '';
--sh-shadow-100: '';
--sh-shadow-200: '';
--sh-shadow-300: '';
--sh-shadow-400: '';
--sh-shadow-500: '';
--sh-shadow-600: '';
}"
`;

exports[`effectsThemePlugin create theme data with one theme which doesn't exist in figma should create css files with css variables: /export-path/effects/vars.css 1`] = `
"
:root {
  --sh-backdrop-blur-100: '';
--sh-backdrop-blur-200: '';
--sh-blur-100: '';
--sh-blur-200: '';
--sh-blur-300: '';
--sh-shadow-100: '';
--sh-shadow-200: '';
--sh-shadow-300: '';
--sh-shadow-400: '';
--sh-shadow-500: '';
--sh-shadow-600: '';
}"
`;

exports[`effectsThemePlugin create theme data with one theme which doesn't exist in figma should create js files with css variables: /export-path/effects/dark-blue/index.ts 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    export const effects = {
    
    
    
    }
    
    "
`;

exports[`effectsThemePlugin create theme data with one theme which doesn't exist in figma should create js files with css variables: /export-path/effects/index.ts 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    export const effects = {
    
    
    
    }
    
    "
`;

exports[`effectsThemePlugin create theme data with one theme which doesn't exist in figma should create js files with css variables: /export-path/effects/light/index.ts 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    export const effects = {
    boxShadow: {"100":"0px 1px 4px 0px rgba(0, 0, 0, 0.05)","200":"0px 1px 4px 0px rgba(0, 0, 0, 0.15)","300":"0px 4px 4px -1px rgba(0, 0, 0, 0.15)","400":"0px 16px 32px 0px rgba(0, 0, 0, 0.05)","500":"0px 16px 16px -8px rgba(0, 0, 0, 0.10)","600":"0px 40px 104px -8px rgba(0, 0, 0, 0.10)"},
    backdropBlur: {"100":"8px","200":"20px"},
    blur: {"100":"8px","200":"20px","300":"32px"},
    }
    
    "
`;

exports[`effectsThemePlugin create theme data with one theme which doesn't exist in figma should create js files with css variables: /export-path/effects/monochrome/index.ts 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    export const effects = {
    
    
    
    }
    
    "
`;

exports[`effectsThemePlugin create theme data with one theme which doesn't exist in figma should create js files with css variables: /export-path/effects/with-vars.ts 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    export const effects = {
    boxShadow: {"100":"var(--sh-shadow-100,'')","200":"var(--sh-shadow-200,'')","300":"var(--sh-shadow-300,'')","400":"var(--sh-shadow-400,'')","500":"var(--sh-shadow-500,'')","600":"var(--sh-shadow-600,'')"},
    backdropBlur: {"100":"var(--sh-backdrop-blur-100,'')","200":"var(--sh-backdrop-blur-200,'')"},
    blur: {"100":"var(--sh-blur-100,'')","200":"var(--sh-blur-200,'')","300":"var(--sh-blur-300,'')"},
    }
    
    "
`;

exports[`effectsThemePlugin create theme data with one theme which doesn't exist in figma should create theme-list.ts files with themes' types: /export-path/themes-list.ts 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    
// THIS FILE IS GENERATED AUTOMATICALLY. DON'T CHANGE IT.

export const DEFAULT_THEME = 'monochrome';

export const THEMES = ['light', 'dark-blue', 'monochrome'] as const;  

export type Theme = typeof THEMES[number];
  
    "
`;

exports[`effectsThemePlugin should create css files with css variables: /export-path/effects/dark/vars.css 1`] = `
"
[data-theme='dark'] {
  --sh-backdrop-blur-100: 8px;
--sh-backdrop-blur-200: 20px;
--sh-blur-100: 8px;
--sh-blur-200: 20px;
--sh-blur-300: 32px;
--sh-shadow-100: 0px 0px 0px 1px rgba(255, 255, 255, 0.10);
--sh-shadow-200: 0px 0px 0px 1px rgba(255, 255, 255, 0.10);
--sh-shadow-300: 0px 0px 0px 1px rgba(255, 255, 255, 0.10);
--sh-shadow-400: 0px 0px 0px 1px rgba(255, 255, 255, 0.20);
--sh-shadow-500: 0px 0px 0px 1px rgba(255, 255, 255, 0.20);
--sh-shadow-600: 0px 0px 0px 1px rgba(255, 255, 255, 0.20);
}"
`;

exports[`effectsThemePlugin should create css files with css variables: /export-path/effects/light/vars.css 1`] = `
"
[data-theme='light'] {
  --sh-backdrop-blur-100: 8px;
--sh-backdrop-blur-200: 20px;
--sh-blur-100: 8px;
--sh-blur-200: 20px;
--sh-blur-300: 32px;
--sh-shadow-100: 0px 1px 4px 0px rgba(0, 0, 0, 0.05);
--sh-shadow-200: 0px 1px 4px 0px rgba(0, 0, 0, 0.15);
--sh-shadow-300: 0px 4px 4px -1px rgba(0, 0, 0, 0.15);
--sh-shadow-400: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
--sh-shadow-500: 0px 16px 16px -8px rgba(0, 0, 0, 0.10);
--sh-shadow-600: 0px 40px 104px -8px rgba(0, 0, 0, 0.10);
}"
`;

exports[`effectsThemePlugin should create css files with css variables: /export-path/effects/monochrome/vars.css 1`] = `
"
[data-theme='monochrome'] {
  --sh-backdrop-blur-100: '';
--sh-backdrop-blur-200: '';
--sh-blur-100: '';
--sh-blur-200: '';
--sh-blur-300: '';
--sh-shadow-100: '';
--sh-shadow-200: '';
--sh-shadow-300: '';
--sh-shadow-400: '';
--sh-shadow-500: '';
--sh-shadow-600: '';
}"
`;

exports[`effectsThemePlugin should create css files with css variables: /export-path/effects/vars.css 1`] = `
"
:root {
  --sh-backdrop-blur-100: '';
--sh-backdrop-blur-200: '';
--sh-blur-100: '';
--sh-blur-200: '';
--sh-blur-300: '';
--sh-shadow-100: '';
--sh-shadow-200: '';
--sh-shadow-300: '';
--sh-shadow-400: '';
--sh-shadow-500: '';
--sh-shadow-600: '';
}"
`;

exports[`effectsThemePlugin should create js files with css variables: /export-path/effects/dark/index.ts 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    export const effects = {
    boxShadow: {"100":"0px 0px 0px 1px rgba(255, 255, 255, 0.10)","200":"0px 0px 0px 1px rgba(255, 255, 255, 0.10)","300":"0px 0px 0px 1px rgba(255, 255, 255, 0.10)","400":"0px 0px 0px 1px rgba(255, 255, 255, 0.20)","500":"0px 0px 0px 1px rgba(255, 255, 255, 0.20)","600":"0px 0px 0px 1px rgba(255, 255, 255, 0.20)"},
    backdropBlur: {"100":"8px","200":"20px"},
    blur: {"100":"8px","200":"20px","300":"32px"},
    }
    
    "
`;

exports[`effectsThemePlugin should create js files with css variables: /export-path/effects/index.ts 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    export const effects = {
    
    
    
    }
    
    "
`;

exports[`effectsThemePlugin should create js files with css variables: /export-path/effects/light/index.ts 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    export const effects = {
    boxShadow: {"100":"0px 1px 4px 0px rgba(0, 0, 0, 0.05)","200":"0px 1px 4px 0px rgba(0, 0, 0, 0.15)","300":"0px 4px 4px -1px rgba(0, 0, 0, 0.15)","400":"0px 16px 32px 0px rgba(0, 0, 0, 0.05)","500":"0px 16px 16px -8px rgba(0, 0, 0, 0.10)","600":"0px 40px 104px -8px rgba(0, 0, 0, 0.10)"},
    backdropBlur: {"100":"8px","200":"20px"},
    blur: {"100":"8px","200":"20px","300":"32px"},
    }
    
    "
`;

exports[`effectsThemePlugin should create js files with css variables: /export-path/effects/monochrome/index.ts 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    export const effects = {
    
    
    
    }
    
    "
`;

exports[`effectsThemePlugin should create js files with css variables: /export-path/effects/with-vars.ts 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    export const effects = {
    boxShadow: {"100":"var(--sh-shadow-100,'')","200":"var(--sh-shadow-200,'')","300":"var(--sh-shadow-300,'')","400":"var(--sh-shadow-400,'')","500":"var(--sh-shadow-500,'')","600":"var(--sh-shadow-600,'')"},
    backdropBlur: {"100":"var(--sh-backdrop-blur-100,'')","200":"var(--sh-backdrop-blur-200,'')"},
    blur: {"100":"var(--sh-blur-100,'')","200":"var(--sh-blur-200,'')","300":"var(--sh-blur-300,'')"},
    }
    
    "
`;

exports[`effectsThemePlugin should create theme-list.ts files with themes' types: /export-path/themes-list.ts 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    
// THIS FILE IS GENERATED AUTOMATICALLY. DON'T CHANGE IT.

export const DEFAULT_THEME = 'monochrome';

export const THEMES = ['light', 'dark', 'monochrome'] as const;  

export type Theme = typeof THEMES[number];
  
    "
`;
